5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1791_1621.log
== TEST (2019-05-29 14:02:08) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:02:17) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:02:41) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))
vetor2 = int(input(""))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:03:09) 
-- CODE:
from numpy import*

vetor1 = input("")
vetor2 = int(input(""))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:05:23) 
-- CODE:
from numpy import*

vetor1 = input("")
vetor2 = int(input(""))

if [vetor1] == ARROZ:
	custo = [vetor1] * [vetor2]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:05:43) 
-- CODE:
from numpy import*

vetor1 = input("")
vetor2 = int(input(""))

if vetor1 == ARROZ:
	custo = [vetor1] * [vetor2]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:05:50) 
-- CODE:
from numpy import*

vetor1 = input("")
vetor2 = int(input(""))

if vetor1 == ARROZ:
	custo = [vetor1] * [vetor2]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:29) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("")))
vetor2 = int(input(""))

if (vetor1) == ARROZ:
	custo = size(vetor1) * 

-- ERROR:
File "XXXX", line 7
    custo = size(vetor1) * 
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:08) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("ARROZ, FEIJAO, BIS, MIOJO, FANTA"))

-- ERROR:
File "XXXX", line 4
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:00) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("ARROZ, FEIJAO, BIS, MIOJO, FANTA")))
vetor2 = int(input(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:39:14) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("ARROZ, FEIJAO, BIS, MIOJO, FANTA")))
vetor2 = int(input(""))

if (vetor1) == ARROZ:
	custo_total = 1.25 * vetor2
	print(custo_total)
-- EXECUTION TIME:
0.344685
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 4, in <module>
    vetor2 = int(input(""))
ValueError: invalid literal for int() with base 10: '[2,1,6,2]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:17) 
-- CODE:
from numpy import*

vetor1 = array(eval(input("ARROZ, FEIJAO, BIS, MIOJO, FANTA")))
vetor2 = int(input(""))

if (vetor1) == ARROZ:
	custo_total = 1.25 * vetor2
	print(custo_total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:37) 
-- CODE:
from numpy import*

vetor1 = arange(eval(input("ARROZ, FEIJAO, BIS, MIOJO, FANTA")))
vetor2 = int(input(""))

if (vetor1) == ARROZ:
	custo_total = 1.25 * vetor2
	print(custo_total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:58) 
-- CODE:
from numpy import*

vetor1 = input("ARROZ, FEIJAO, BIS, MIOJO, FANTA")
vetor2 = int(input(""))

if (vetor1) == ARROZ:
	custo_total = 1.25 * vetor2
	print(custo_total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:40:04) 
-- CODE:
from numpy import*

vetor1 = input("ARROZ, FEIJAO, BIS, MIOJO, FANTA")
vetor2 = int(input(""))

if (vetor1) == ARROZ:
	custo_total = 1.25 * vetor2
	print(custo_total)
-- EXECUTION TIME:
0.441682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 4, in <module>
    vetor2 = int(input(""))
ValueError: invalid literal for int() with base 10: '[2,1,6,2]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:05) 
-- CODE:
from numpy import*

vetor1 = input("ARROZ, FEIJAO, BIS, MIOJO, FANTA")
vetor2 = int(input(""))

if (vetor1) == ARROZ:
	custo_total = 1.25 * vetor2
	print(custo_total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
